--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/bb11f8daa2.js" crossorigin="anonymous"></script>
+    <!-- style.css -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -19,7 +22,7 @@
         <!-- top players and top blog -->
         <section class="conteiner">
             <div class="top-players ">
-                <h2 class="top">Top player</h2>
+                <h2 class="top">Top Player</h2>
                 <div class="players">
                     <div class="player">
                         <img src="images/players/player-1.png" alt="">
@@ -39,16 +42,141 @@
                     </div>
                     <div class="player">
                         <img src="images/players/player-5.png" alt="">
-                        <h3 class="p-name">Polar</h3>
+                        <h3 class="p-name"> Dak Polar</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-6.png" alt="">
-                        <h3 class="p-name">Jonson</h3>
+                        <h3 class="p-name">Mr.Jonson</h3>
                     </div>
                 </div>
             </div>
             <hr>
+            <div class="top-blog">
+                <h2 class="top">Top Blog</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="bg">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="bg-1">
+                            <h3 class="bg-title">13 of My Favorite
+                                UI/UX Goodies</h3>
+                            <p class="blog-a">By <a href=""> Danny Sapio</a></p>
+                        </div>
+
+                    </article>
+                    <article class="blog">
+                        <div class="bg">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="bg-1">
+                            <h3 class="bg-title">UI cheat sheet:
+                                list vs grids</h3>
+                            <p class="blog-a">By <a href="">Tess Gadd</a></p>
+                        </div>
+
+                    </article>
+                    <article class="blog">
+                        <div class="bg">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="bg-1">
+                            <h3 class="bg-title">7 typography tips
+                                for interface design</h3>
+                            <p class="blog-a">By <a href="">Jeremiah Lam</a></p>
+                        </div>
+
+                    </article>
+                    <article class="blog">
+                        <div class="bg">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="bg-1">
+                            <h3 class="bg-title">Your logo is
+                                copied</h3>
+                            <p class="blog-a">By <a href="">Ferdinan Vogler</a></p>
+                        </div>
+
+                    </article>
+                </div>
+            </div>
         </section>
+        <!-- Latest Course -->
+        <section class="conteiner">
+            <h2 class="top">Lates Course</h2>
+            <div class="courses">
+                <article class="course">
+                    <div class="c-img">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="c-detail">
+                        <h2 class="c-title">React - The Complete Guide 2020</h2>
+                        <p class="course-p">Reed Krakoff.</p>
+                    </div>
+                    <div class="info">
+                        <div>
+                            <i class="fa-solid fa-star icon"></i>
+                            <i class="fa-solid fa-star icon"></i>
+                            <i class="fa-solid fa-star icon"></i>
+                            <i class="fa-solid fa-star icon"></i>
+                            <i class="fa-solid fa-star icon-gary"></i>
+                            <span> 4.5</span>
+                        </div>
+                        <div class="clo">
+                            <i class="fa-regular fa-clock clo-1"> 01:30 hr</i>
+                        </div>
+                    </div>
+
+                </article>
+                <article class="course">
+                    <div class="c-img">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="c-detail">
+                        <h2 class="c-title">Powerpoint 2020 Master Powerpoint Cour</h2>
+                        <p class="course-p">Walter Scott</p>
+                    </div>
+                    <div class="info">
+                        <div>
+                            <i class="fa-solid fa-star icon"></i>
+                            <i class="fa-solid fa-star icon"></i>
+                            <i class="fa-solid fa-star icon"></i>
+                            <i class="fa-solid fa-star icon"></i>
+                            <i class="fa-solid fa-star icon-gary"></i>
+                            <span> 4.5</span>
+                        </div>
+                        <div class="clo">
+                            <i class="fa-regular fa-clock clo-1"> 01:20 hr</i>
+                        </div>
+                    </div>
+
+                </article>
+                <article class="course">
+                    <div class="c-img">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="c-detail">
+                        <h2 class="c-title">The Complete JavaScript Course 2020</h2>
+                        <p class="course-p">Reed Krakoff.</p>
+                    </div>
+                    <div class="info">
+                        <div>
+                            <i class="fa-solid fa-star icon"></i>
+                            <i class="fa-solid fa-star icon"></i>
+                            <i class="fa-solid fa-star icon"></i>
+                            <i class="fa-solid fa-star icon"></i>
+                            <i class="fa-solid fa-star icon-gary"></i>
+                            <span> 4.5</span>
+                        </div>
+                        <div class="clo">
+                            <i class="fa-regular fa-clock clo-1"> 01:30 hr</i>
+                        </div>
+                    </div>
+
+                </article>
+            </div>
+        </section>
+
     </main>
 
 </body>
